# stor

./: Cargo.toml  Makefile  README.md  justfile
competitions/zsh/: _stor
completions/zsh/: _stor
src/: cli.rs  config.rs  main.rs
