[package]
name = "stor"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
env_logger = "0.11.10"
fast-glob = "1.0.1"
fs_extra = "1.3.0"
home = "0.5.12"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.0" }
